# Prismi

./: README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
src/: app.d.ts  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/components/: Sidebar.svelte  Topbar.svelte
src/routes/: +layout.svelte
