[package]
name = "app"
version = "1.0.0"
description = "Protect your data from being lost"
authors = ["Daniel Nunes"]
license = "MPL-2.0"
repository = "https://github.com/D3W10/Prismi"
default-run = "app"
edition = "2021"
rust-version = "1.75"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

tauri = { version = "1.6.5", features = [ "dialog-confirm", "window-set-decorations", "protocol-asset", "window-hide", "window-show", "dialog-open", "window-minimize", "window-maximize", "os-all", "macos-private-api", "window-unminimize", "window-close", "app-all", "shell-open", "window-start-dragging", "window-create", "window-unmaximize"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }

[target.'cfg(not(target_os = "linux"))'.dependencies]
window-shadows = "0.2.1"

[features]
custom-protocol = ["tauri/custom-protocol"]
